src/objects/Fielo_MedioDePago__c.object
<CustomObject>
    <fields>
        <fullName>F_Acumula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acumula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_IdMedioDePagoEDS__c</fullName>
        <label>Id Medio de Pago EDS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_IdMedioDePagoTTCC__c</fullName>
        <label>Id Medio de Pago TTCC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Medio de Pago</label>
    <listViews>
        <fullName>Fielo_All</fullName>
        <columns>NAME</columns>
        <columns>F_Estado__c</columns>
        <columns>F_Acumula__c</columns>
        <columns>F_IdMedioDePagoEDS__c</columns>
        <columns>F_IdMedioDePagoTTCC__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medios de Pago</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>